--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<h1>Start These</h1>
 </div>
 <div class = "ul chapters">
-	<div id = "simple" href = "html/sidraganddrop.html" class ="li chapter">Simple Interest</div>
-	<div id = "compound"  href = "html/cigpart1.html"  class ="li chapter">Compound Interest</div>
-	<div id = "comparison" href = "html/comppractice.html"  class ="li chapter">Comparison</div>
+	<div id = "simple" onclick = "launchChapter('simple')" class ="li chapter">Simple Interest</div>
+	<div id = "compound"  onclick = "launchChapter('compound')" class ="li chapter">Compound Interest</div>
+	<div id = "comparison" onclick = "launchChapter('comparison')" class ="li chapter">Comparison</div>
 	<div id = "test" class ="li chapter locked" disabled>Test Your Knowledge</div>
 </div>
 
