--- a/html/comppractice.html
+++ b/html/comppractice.html
@@ -18,8 +18,8 @@
   <div class ="container">
 
   	<div class="page-nav">
-    <a id = "back" href="../index.html" class="back-nav">&#8249; Back</a>
-    <a id = "next" href = "../index.html" class = "next-nav disabled">Finish &#8250;</a>
+    <a id = "back" href="../" class="back-nav">&#8249; Back</a>
+    <a id = "next" href = "../" class = "next-nav disabled">Finish &#8250;</a>
   </div>
 
 <div style = "background-color:#f8f9fa; font-weight:bold; padding:10px; display: inline-block; margin-bottom: 30px" >
