--- a/html/sidraganddrop.html
+++ b/html/sidraganddrop.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="container">
 	<div class="page-nav">
-		<a id = "back" href="index.html" class="back-nav">&#8249; Back</a>
+		<a id = "back" href="../" class="back-nav">&#8249; Back</a>
 		<a id="next" href = "sigdpart1.html" class = "next-nav disabled">Next &#8250;</a>
 	</div>
 
