--- a/html/cipractice.html
+++ b/html/cipractice.html
@@ -19,7 +19,7 @@
 
   	<div class="page-nav">
     <a id = "back" href="cidpart2.html" class="back-nav">&#8249; Back</a>
-    <a id = "next" href = "../index.html" class = "next-nav disabled">Finish &#8250;</a>
+    <a id = "next" href = "../" class = "next-nav disabled">Finish &#8250;</a>
   </div>
 
 <div style = "background-color:#f8f9fa; font-weight:bold; padding:10px; display: inline-block; margin-bottom: 30px" >
