--- a/html/cipractice.html
+++ b/html/cipractice.html
@@ -24,7 +24,7 @@
 
 <div style = "background-color:#f8f9fa; font-weight:bold; padding:10px; display: inline-block; margin-bottom: 30px" >
 	<p>Total amount owed if the interest is compounded </p>
-  <p>A= P(1+r)^n</p>
+  <p>A= P(1+r)<sup>n</sup></p>
  </div>
 
  <div class = "practice-questions">
