--- a/html/sigdpart1.html
+++ b/html/sigdpart1.html
@@ -21,8 +21,8 @@
 	</div>
 	<h2>Simple Interest 2: First Practice</h2>
 	<label for="investinp" class="row">You want to re-invest the $1000 back to his business, so he keeps the principal $1000 for another year. How much would the total amount be at the end of two years? </label>
-	<input class =  "answer" id = "investinp" type = "text"> <button for = "hints" id ="investhint" class="button hint-button">?</button>
-	<div id = "hints" title="Hints" class = "row hints">
+	<input class =  "answer" id = "investinp" type = "text"> <button for = "hints" title="Hints" id ="investhint" class="button hint-button">?</button>
+	<div id = "hints" class = "row hints">
 		<span>Hints:</span>
 	</div>
 </div>
