--- a/html/cipractice.html
+++ b/html/cipractice.html
@@ -18,7 +18,7 @@
   <div class ="container">
 
   	<div class="page-nav">
-    <a id = "back" href="cidpart2.html" class="back-nav">&#8249; Back</a>
+    <a id = "back" href="cigpart2.html" class="back-nav">&#8249; Back</a>
     <a id = "next" href = "../" class = "next-nav disabled">Finish &#8250;</a>
   </div>
 
