--- a/html/cigpart2.html
+++ b/html/cigpart2.html
@@ -49,6 +49,7 @@
   <button for = "hints2" id ="hint2"  title="Hints" class="button hint-button">?</button>
 </div>
 </div>
+<img id = "cidiagram" style="width:80%;display: none" src="../assets/compound-interest.png">
 <div id = "hints1" class = "row hints">
     <span>Year 2 Hints:</span>
   </div>
