--- a/html/comppractice.html
+++ b/html/comppractice.html
@@ -23,7 +23,10 @@
   </div>
 
   <h2>Comparison Practice</h2>
-
+  <div style = "display: inline-flex; align-items: baseline">
+<img style="width:500px; height:fit-content" src="../assets/simpleinterest.png">
+<img style="width:500px" src="../assets/compound-interest.png">
+</div>
  <div class = "practice-questions">
  	<div class="practice-question">
  		<div class="question-num">1.</div>
