--- a/html/sigdpart2.html
+++ b/html/sigdpart2.html
@@ -56,6 +56,7 @@
   <button for = "hints3" id ="hint3" title="Hints" class="button hint-button">?</button>
 </div>
 </div>
+<img id = "sidiagram" style="width:80%;display: none" src="../assets/simpleinterest.png">
 <div id = "hints1" class = "row hints">
     <span>Year 2 Hints:</span>
   </div>
@@ -65,7 +66,6 @@
 <div id = "hints3" class = "row hints">
     <span>Year 4 Hints:</span>
   </div>
-
   </div>
 </body>
 </html>
