--- a/html/cigpart2.html
+++ b/html/cigpart2.html
@@ -49,6 +49,8 @@
   <button for = "hints2" id ="hint2"  title="Hints" class="button hint-button">?</button>
 </div>
 </div>
+<iframe class ="content-video" width="560" height="315" src="https://www.youtube.com/embed/wf91rEGw88Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <img id = "cidiagram" style="width:80%;display: none" src="../assets/compound-interest.png">
 <div id = "hints1" class = "row hints">
     <span>Year 2 Hints:</span>
@@ -58,5 +60,8 @@
   </div>
 
   </div>
+    <script type="text/javascript">
+    loadTableFunctions();
+  </script>
 </body>
 </html>
