--- a/html/sidraganddrop.html
+++ b/html/sidraganddrop.html
@@ -32,12 +32,12 @@
 
 	</div>
 	<div class ="row drag-questions">
-		<div class ="question">The amount you entered initially = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag1"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag2"> 
+		<div class ="question" for="amount-inst">The amount you entered initially = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag1, drag2"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag2, drag1"> 
 		</span>
 		</div>
-		<div class ="question">The cost of borrowing the amount = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag5"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag3"> </span></div>
-		<div class ="question">The Interest in Percentage = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag4"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag6"> </span></div>
-		<div class ="question">The amount you need to give back in the end = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag8"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag7"> </span></div>
+		<div class ="question" for="cost-inst">The cost of borrowing the amount = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag5, drag3"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag3, drag5"> </span></div>
+		<div class ="question" for="interest-inst">The Interest in Percentage = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag4, drag6"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag6, drag4"> </span></div>
+		<div class ="question" for="amount2-inst">The amount you need to give back in the end = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag8, drag7"> </span> = <span class="dropspace" ondrop="drop(event)" ondragover="allowDrop(event)" for = "drag7, drag8"> </span></div>
 	</div>
 	<div class = "row">
 		<div id="drag1" class = "dragger" draggable="true" ondragstart="drag(event)">$1000</div>
@@ -49,6 +49,8 @@
 		<div id="drag7" class = "dragger" draggable="true" ondragstart="drag(event)">Total Amount</div>
 		<div id="drag8" class = "dragger" draggable="true" ondragstart="drag(event)">$1100</div>
 	</div>
+
+	<iframe class="content-video" width="560" height="315" src="https://www.youtube.com/embed/vIPhIi9KzAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<!--Hint Box-->
 </div>
