--- a/html/sigdpart2.html
+++ b/html/sigdpart2.html
@@ -56,6 +56,9 @@
   <button for = "hints3" id ="hint3" title="Hints" class="button hint-button">?</button>
 </div>
 </div>
+<iframe class="content-video" width="560" height="315" src="https://www.youtube.com/embed/djBJmRH9lDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 <img id = "sidiagram" style="width:80%;display: none" src="../assets/simpleinterest.png">
 <div id = "hints1" class = "row hints">
     <span>Year 2 Hints:</span>
@@ -67,5 +70,9 @@
     <span>Year 4 Hints:</span>
   </div>
   </div>
+
+  <script type="text/javascript">
+    loadTableFunctions();
+  </script>
 </body>
 </html>
